+obstacle, +point counter. Fix : Jump.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -33,14 +33,24 @@
     animation: playerMove 450ms alternate infinite;
 }
 
-#obstacle {
+#obstacleOne {
     position: absolute;
-    width: 500px;
-    height: 25px;
-    top: 475px;
+    width: 50px;
+    height: 55px;
+    top: 445px;
     outline: solid 1px black;
     background-color: red;
     animation: obstacleMove 3s infinite linear;
+}
+
+#obstacleTwo{
+    position: absolute;
+    width: 50px;
+    height: 55px;
+    top: 445px;
+    outline: solid 1px black;
+    background-color: orangered;
+    animation: obstacleMove 2s infinite linear; 
 }
 
 @keyframes playerMove {
